Fixed imgs and spacing

--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
 :root {
    --base-font-size: 16px;
+   --gray-text: #ADB7B9;
    --blue-text: #86ddff;
    --dark-blue: #002b8f;
    --mid-blue: #3ba0ff;
-   --mid-gray: #173 #183 #190/var(--tw-text-opacity)
+   /* --mid-gray: #173 #183 #190/var(--tw-text-opacity) */
 }
 
 body {
@@ -36,7 +37,7 @@ body {
 }
 
 /* Logo */
-img#logo {
+img.logo {
    width: 5em;
    height: 5em;
    margin-left: 6.625em;
@@ -105,29 +106,25 @@ img#logo {
 /* Intro */
 #hello-intro {
    margin: 10em 0 0 5.625em;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
 }
+
 .intro-text {
    width: 55%;
-   /* Adjust the width as needed */
 }
 
 .intro-img {
-   width: 60%;
+   width: 100%;
    height: auto;
-   /* Adjust the width as needed */
-   text-align: right;
 }
 
 .intro-img img {
-   max-width: 100%;
+   width: 100%;
    height: auto;
    display: block;
-   /* Ensure the image is a block-level element for better alignment */
    margin: 0 -2em 0;
-   /* Center the image horizontally */
 }
 
 h1 {
@@ -158,7 +155,6 @@ h1 {
    margin: 2em .68em 0 0;
 }
 
-
 /* Hire Link */
 .hire {
    color: #ffff;
@@ -182,7 +178,6 @@ h1 {
 }
 
 /* About Section */
-
 #about-me {
    margin: 8em 7.5em 0 5.625em;
    display: flex;
@@ -191,19 +186,33 @@ h1 {
 }
 
 .about-img {
-   width: 80%;
-   height: auto;
-   /* Adjust the width as needed */
-   /* text-align: right; */
+   width: 50%;
 }
 
-.about-text {
+/* .about-img img {
+   max-width: 100%;
+   height: auto;
+   display: block;
+   padding-left: 13em;
+   margin: 0 -2em 0;
+} */
 
+
+.about-img img {
+   width: 80%;
+   /* Increase the width to make it wider */
+   height: auto;
+   /* Maintain the aspect ratio to prevent distortion */
+   display: block;
+   margin: 0 auto;
+   /* Center the image horizontally */
+}
+.about-text {
    color: gray;
    font-size: 1.1em;
    font-weight: 100;
-   width: 50%;
-   margin-left: 2px;
+   width: 57%;
+   padding-left: 5em;
    margin-bottom: 5px;
    line-height: 1.5em;
 }
@@ -213,7 +222,6 @@ h2 {
    font-size: 2.2em;
    margin-bottom: .55em;
 }
-
 
 li.skills {
    color: #ffff;
